# epfl-ba1-mt-icc

./: CMakeLists.txt  main.cpp  welcome.cpp
module-1/: 1-variables.cpp  2-io.cpp  3-operators.cpp  as1_1-hello-world.cpp  as1_2-swapping-values.cpp  ex1-captains-age.cpp  ex2-fondue.cpp  ex3-basic-maths.cpp
module-2/: 1-if-statement.cpp  2-logical-operators.cpp  3-boolean.cpp  as-2_1-bike-rental.cpp  as-2_2-shrooms.cpp  ex4-conditional-expressions.cpp  ex5-conditional-expressions.cpp  ex6-arithmetic-expressions.cpp
module-3/: 1-for-loops.cpp  2-while-loops.cpp  3-blocks.cpp  as-3_1-number-game.cpp  as-3_2-predators-and-prey-(uwu).cpp  ex10-prime-numbers.cpp  ex7-multiplication-tables.cpp  ex8-ball-bounce.cpp  ex9-ball-bouncier.cpp
module-4/: 1-functions.cpp  as-4_1-read-and-say.cpp  as-4_2-easter-date.cpp  as-4_3-mastermind.cpp
module-5/: ex16-scalar-product.cpp  ex17-matrix-multiplication.cpp  tables.cpp
module-6/: as-6_1-cesar-code.cpp  as-6_2-table-max.cpp  as-6_3-fence.cpp
